ibm-mq/2.0/modules/ROOT/pages/ibm-mq-xml-ref.adoc
= IBM MQ Connector 2.0 Reference 
:page-aliases: connectors::ibm/ibm-mq-xml-ref.adoc

Provides the main class of this connector, which is the entry point where configurations, connection providers, operations, and sources are declared.

Release Notes: xref:release-notes::connector/connector-ibm-mq.adoc[IBM MQ Connector Release Notes]

== Configurations
---
[[config]]
=== Config

Default configuration.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_connection, IBM MQ Connection>>
* <<config_xa_connection, IBM MQ XA Connection>>
 | The connection types to provide to this configuration. | | x
| Encoding a| String |  The default encoding of the message body if the message doesn't communicate it. |  |
| Content Type a| String |  The default content type of the message body is the message doesn't communicate it. a|  `/` |
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  Whether to specify a `correlationId` when publishing messages. This applies both for custom correlation IDs specified at the operation level and for default correlation IDs taken from the current event. |  AUTO |
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when it sees fit. |  |
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL
** DUPS_OK |  The Session ACK mode to use when consuming a message. |  AUTO |
| Consumer Type a| One of:

* <<topic-consumer>>
* queue-consumer |  |  |
| Selector a| String |  Default JMS selector to use for filtering incoming messages. |  |
| Persistent Delivery a| Boolean a|  If true, the message is sent using the PERSISTENT `JMSDeliveryMode`. |  `false` |
| Priority a| Number a|  The default `JMSPriority` value to use when sending the message. |  `4` |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  `0` |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations. |  `MILLISECONDS` |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID. |  `false` |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp. |  `false` |
| Delivery Delay a| Number |  Only used by JMS 2.0:  Sets the delivery delay to be applied to postpone the Message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Only used by JMS 2.0: Time unit to use in the deliveryDelay configurations. |  `MILLISECONDS` |
| Jms Type a| String |  The message type identifier to be set in the JMSType Header when a message is sent. |  |
|===

==== Connection Types

[[config_connection]]
===== IBM MQ Connection

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Connection Mode a| One of:

* <<binding>>
* <<client>> |  |  | x
| Username a| String |  Username to use to connect to the IBM MQ Server. |  |
| Password a| String |  Password of the used username. |  |
| Client ID a| String |  ID of the JMS Client used to identify the current client. |  |
| CSS ID a| Number |  Number to use when connecting to the queue manager. The default value (819) is suitable in most situations. |  |
| Additional Properties a| Object |  Additional properties to configure the IBM MQ client. |  |
| Caching Strategy a| One of:

* <<default-caching>>
* no-caching |  The strategy to use for caching of sessions and connections. |  |
| Specification a| Enumeration, one of:

** JMS_2_0
** JMS_1_1 |  Version of the JMS specification for the JMS Client.  |  `JMS_2_0` |
| Target Client a| Enumeration, one of:

** JMS_COMPLIANT
** NO_JMS_COMPLIANT a|  Describes the way to create the IBM MQ JMS Client. When using `JMS_COMPLIANT`, indicates that the RFH2 format is used to send information. The RFH2 header carries JMS-specific data that is associated with the message content. When not using `JMS_COMPLIANT`, features like User Properties and Media Type propagation stop working. |  `JMS_COMPLIANT` |
| Application Name a| String |  Application name to be registered in the connection factory. By default this is the application name. Max 27 characters are allowed. |  |
| Read Message Descriptor (MD) a| Enumeration, one of:

** ENABLED
** DISABLED |  Indicates if this is enabled to read the message descriptor properties. |  ENABLED |
| Write Message Descriptor (MD) a| Enumeration, one of:

** ENABLED
** DISABLED |  Indicates if this is enabled to write the message descriptor properties. |  ENABLED |
| Message Context a| Enumeration, one of:

** DEFAULT
** SET_ALL_CONTEXT
** SET_IDENTITY_CONTEXT a|  Indicates the message context to configure message options.

 * DEFAULT: No options can be set.
 * SET_ALL_CONTEXT: All options can be set.
 * SET_IDENTITY_CONTEXT: Only Identity options can be set.
|  DEFAULT |
| Temporary Model a| String |  The name of the IBM MQ model queue that refers to a model queue that can be used to create a permanent dynamic queue. |  |
| Temporal Queue Prefix a| String |  The prefix to use when creating temporary queue names. The last non-blank character must be an asterisk (`*`). |  |
| Temporal Topic Prefix a| String |  The prefix to use when creating temporary topic names. The last non-blank character must be an asterisk (`*`). |  |
| Receive Exit Handler a| String |  The receive exit handler class. When writing exits for use with IBM MQ Java, each object must also have a constructor that takes a single string argument. When IBM MQ creates an instance of the exit, it passes any initialization data into the exit using this constructor. |  |
| Receive Exit Handler Init a| String |  Initialization string for the receive exit. |  |
| Send Exit Handler a| String |  The send exit handler class. When writing exits for use with IBM MQ Java, each object must also have a constructor that takes a single string argument. When IBM MQ creates an instance of the exit, it passes any initialization data into the exit using this constructor. |  |
| Send Exit Handler Init a| String |  Initialization string for the send exit. |  |
| Security Exit Handler a| String |  The security exit handler class. When writing exits for use with IBM MQ Java, each object must also have a constructor that takes a single string argument. When IBM MQ creates an instance of the exit, it passes any initialization data into the exit using this constructor. |  |
| Security Exit Handler Init a| String |  Initialization string for the security exit. |  |
| IBM MQ CipherSpec Mapping a| Enumeration, one of:

** ORACLE_CIPHER_SUITES
** IBM_CIPHER_SUITES
** NONE |  Defines which CipherSuite mapping to use: Oracle JDK or IBM JDK. Configure this parameter depending on the host JDK. For more information, see https://www.ibm.com/docs/en/ibm-mq/8.0.0?topic=SSFKSJ_8.0.0/com.ibm.mq.dev.doc/q113220_.html[SSL/TLS CipherSpecs and CipherSuites]. |  `ORACLE_CIPHER_SUITES` |
| IBM Cipher Suite a| String |  CipherSuite to use to connect to the IBM MQ Server. |  |
| Reset Count a| Number |  This property represents the total number of bytes sent and received by a connection before the secret key that is used for encryption is renegotiated. Integer value between 0 (disabled) and 999999999. |  |
| Peer Name a| String |  Specifies a distinguished name pattern, to ensure that your JMS application connects to the correct queue manager. |  |
| FIPS Required a| Boolean |  Enable it if is required a connection to use a CipherSuite that is supported by the IBM Java JSSE FIPS provider (IBMJSSEFIPS). |  `false` |
| Cert Stores a| String |  Specifies a list of LDAP servers to use for certificate revocation list (CRL) checking. |  |
| TLS Context a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[NOTE]
You can also configure Client Channel Definition Tables (CCDT) connection by going to the *Advanced* tab and adding the `XMSC_WMQ_CCDTURL` and `XMSC_WMQ_QUEUE_MANAGER` properties in the *Additional properties* section. If you use the `XMSC_WMQ_CCDTURL` property, ensure *Connection mode* is set to `Client` in the *General* tab.

[[config_xa_connection]]
===== IBM MQ XA Connection

Supports creating and joining XA transactions, which enables the connector to participate in a transaction with multiple resources.

[NOTE]
IBM MQ Connector does not support nested XA transactions due to IBM MQ driver limitations.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Connection Mode a| One of:

* <<binding>>
* <<client>> |  |  | x
| Username a| String |  Username to use to connect to the IBM MQ Server. |  |
| Password a| String |  Password of the used username. |  |
| Client ID a| String |  ID of the JMS Client used to identify the current client. |  |
| CSS ID a| Number |  Number to use when connecting to the queue manager. The default value (819) is suitable in most situations. |  |
| Additional Properties a| Object |  Additional properties to configure the IBM MQ client. |  |
| Caching Strategy a| One of:

* <<default-caching>>
* no-caching |  The strategy to use for caching of sessions and connections. |  |
| Specification a| Enumeration, one of:

** JMS_2_0
** JMS_1_1 |  Version of the JMS specification for the JMS Client.  |  `JMS_2_0` |
| Target Client a| Enumeration, one of:

** JMS_COMPLIANT
** NO_JMS_COMPLIANT a|  Describes the way to create the IBM MQ JMS Client. When using `JMS_COMPLIANT`, indicates that the RFH2 format is used to send information. The RFH2 header carries JMS-specific data that is associated with the message content. When not using `JMS_COMPLIANT`, features like User Properties and Media Type propagation stop working. |  `JMS_COMPLIANT` |
| Application Name a| String |  Application name to be registered in the connection factory. By default this is the application name. Max 27 characters are allowed. |  |
| Read Message Descriptor (MD) a| Enumeration, one of:

** ENABLED
** DISABLED |  Indicates if this is enabled to read the message descriptor properties. |  ENABLED |
| Write Message Descriptor (MD) a| Enumeration, one of:

** ENABLED
** DISABLED |  Indicates if this is enabled to write the message descriptor properties. |  ENABLED |
| Message Context a| Enumeration, one of:

** DEFAULT
** SET_ALL_CONTEXT
** SET_IDENTITY_CONTEXT a|  Indicates the message context to configure message options.

 * DEFAULT: No options can be set.
 * SET_ALL_CONTEXT: All options can be set.
 * SET_IDENTITY_CONTEXT: Only Identity options can be set.
|  DEFAULT |
| Temporary Model a| String |  The name of the IBM MQ model queue that refers to a model queue that can be used to create a permanent dynamic queue. |  |
| Temporal Queue Prefix a| String |  The prefix to use when creating temporary queue names. The last non-blank character must be an asterisk (`*`). |  |
| Temporal Topic Prefix a| String |  The prefix to use when creating temporary topic names. The last non-blank character must be an asterisk (`*`). |  |
| Receive Exit Handler a| String |  The receive exit handler class. When writing exits for use with IBM MQ Java, each object must also have a constructor that takes a single string argument. When IBM MQ creates an instance of the exit, it passes any initialization data into the exit using this constructor. |  |
| Receive Exit Handler Init a| String |  Initialization string for the receive exit. |  |
| Send Exit Handler a| String |  The send exit handler class. When writing exits for use with IBM MQ Java, each object must also have a constructor that takes a single string argument. When IBM MQ creates an instance of the exit, it passes any initialization data into the exit using this constructor. |  |
| Send Exit Handler Init a| String |  Initialization string for the send exit. |  |
| Security Exit Handler a| String |  The security exit handler class. When writing exits for use with IBM MQ Java, each object must also have a constructor that takes a single string argument. When IBM MQ creates an instance of the exit, it passes any initialization data into the exit using this constructor. |  |
| Security Exit Handler Init a| String |  Initialization string for the security exit. |  |
| IBM MQ CipherSpec Mapping a| Enumeration, one of:

** ORACLE_CIPHER_SUITES
** IBM_CIPHER_SUITES
** NONE |  Defines which CipherSuite mapping to use: Oracle JDK or IBM JDK. Configure this parameter depending on the host JDK. For more information, see https://www.ibm.com/docs/en/ibm-mq/8.0.0?topic=SSFKSJ_8.0.0/com.ibm.mq.dev.doc/q113220_.html[SSL/TLS CipherSpecs and CipherSuites]. |  `ORACLE_CIPHER_SUITES` |
| IBM Cipher Suite a| String |  CipherSuite to use to connect to the IBM MQ Server. |  |
| Reset Count a| Number |  This property represents the total number of bytes sent and received by a connection before the secret key that is used for encryption is renegotiated. Integer value between 0 (disabled) and 999999999. |  |
| Peer Name a| String |  Specifies a distinguished name pattern, to ensure that your JMS application connects to the correct queue manager. |  |
| FIPS Required a| Boolean |  Enable it if is required a connection to use a CipherSuite that is supported by the IBM Java JSSE FIPS provider (IBMJSSEFIPS). |  `false` |
| Cert Stores a| String |  Specifies a list of LDAP servers to use for certificate revocation list (CRL) checking. |  |
| TLS Context a| <<Tls>> |  |  |
| Min Pool Size a| Number |  The minimum size of the XA connection pool. |  `4` |
| Max Pool Size a| Number |  The maximum size of the XA connection pool. |  `32` |
| Max Idle Seconds a| Number |  The number of seconds an XA transaction can remain idle before it's eligible for eviction. |  `60` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Operations

* <<consume>>
* <<publish>>
* <<publishConsume>>

== Sources

* <<listener>>


[[consume]]
=== Consume

`<ibm-mq:consume>`

Allows a user to consume a single message from a given destination.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination a| String |  The name of the destination from where the message should be consumed. |  | x
| Consumer Type a| One of:

* <<topic-consumer>>
* queue-consumer |  The type of the MessageConsumer that is required for the given destination, along with any extra configurations that are required based on the destination type. |  |
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** MANUAL |  The ConsumerAckMode to configure over the message and session. |  |
| Selector a| String |  A custom JMS selector for filtering the messages. |  |
| Maximum Wait a| Number |  Maximum time to wait for a message before timing out. |  10000 |
| Maximum Wait Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the maximumWaitTime configurations. |  MILLISECONDS |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Content Type a| String |  Sets the ContentType of the received message. If the message already have one, this one is overridden. |  |
| Encoding a| String |  Sets the Encoding of the received message. If the message already have one, this one is overridden. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<IBM MQ Attributes>>
|===

=== For Configurations

* <<config>>

==== Throws

* IBM-MQ:ACK
* IBM-MQ:CONNECTIVITY
* IBM-MQ:CONSUMING
* IBM-MQ:DESTINATION_NOT_FOUND
* IBM-MQ:RETRY_EXHAUSTED
* IBM-MQ:SECURITY
* IBM-MQ:TIMEOUT


[[publish]]
=== Publish

`<ibm-mq:publish>`

Allows a user to send a Message to a JMS destination.

NOTE: When using multiple MUnit test suites with the *Publish* operation, set the `avoid.dispose.mq.threads` system property to `true`. This property prevents the connector from cleaning up IBM MQ threads that are needed for the next test suite to run.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination a| String |  The name of the Destination where the Message should be sent |  | x
| Destination Type a| Enumeration, one of:

** QUEUE
** TOPIC |  The MQDestinationType of the destination. |  QUEUE |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  Transactional Action for the operation. Indicates if the publish must be executed or not in a transaction. |  JOIN_IF_POSSIBLE |
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Options on whether to include an outbound correlation ID or not. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message. |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message. |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  The content type of the message's body. |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property. |  true |
| Encoding a| String |  The encoding of the message's body. |  |
| Reply To a| <<MQJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties that should be set to this Message. |  |
| JMSX Properties a| <<MQJmsxProperties>> |  The JMSX properties that should be set to this Message. |  |
| Persistent Delivery a| Boolean |  If true, the Message is sent using the PERSISTENT JMSDeliveryMode. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations |  |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp. |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to be applied to postpone the Message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations. |  |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<config>>

==== Throws

* IBM-MQ:CONNECTIVITY
* IBM-MQ:DESTINATION_NOT_FOUND
* IBM-MQ:ILLEGAL_BODY
* IBM-MQ:PUBLISHING
* IBM-MQ:RETRY_EXHAUSTED
* IBM-MQ:SECURITY


[[publishConsume]]
=== Publish Consume

`<ibm-mq:publish-consume>`


Allows a user to send a message to a JMS destination and wait for a response either to the provided ReplyTo destination or to a temporary destination created dynamically.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination a| String |  The name of the Destination where the Message should be sent |  | x
| Request-Reply Pattern a| Enumeration, one of:

** CORRELATION_ID
** MESSAGE_ID
** NONE | Indicates how requests and reply messages are correlated, which ensures that the incoming message is the proper reply to the outgoing message.

* The `CORRELATION_ID` pattern value is used with the *Publish Consume* operation. After the operation publishes a request message to the destination queue, it expects a message with the same correlation ID as the request message. It then consumes that correlated response message.

* The `MESSAGE_ID` pattern value is used with the *Publish Consume* operation. After the operation publishes a request message to the destination queue, it expects a message with a correlation ID of the same value as the message ID of the request message. It then consumes that correlated response message.| CORRELATION_ID |
| Send Correlation ID a| Enumeration, one of:
** AUTO
** ALWAYS
** NEVER |  Options on whether to include an outbound correlation ID or not. |  |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Body a| Any |  The body of the Message. |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message. |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message. |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property. |  true |
| Content Type a| String |  The content type of the message's body. |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property. |  true |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<MQJmsDestination>> |  The destination where a reply to this Message should be sent. |  |
| User Properties a| Object |  The custom user properties that should be set to this Message |  |
| JMSX Properties a| <<MQJmsxProperties>> |  The JMSX properties that should be set to this Message |  |
| Persistent Delivery a| Boolean |  If true, the Message is sent using the PERSISTENT JMSDeliveryMode. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations |  |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to be applied to postpone the Message delivery |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations |  |
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** MANUAL |  The Session ACK mode to use when consuming the message | IMMEDIATE  |
| Maximum Wait a| Number |  Maximum time to wait for a message to arrive before timeout |  10000 |
| Maximum Wait Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the maximumWaitTime configuration |  MILLISECONDS |
| Content Type a| String |  The content type of the message body to be consumed. |  |
| Encoding a| String |  The encoding of the message body to be consumed. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<IBM MQ Attributes>>
|===

=== For Configurations

* <<config>>

==== Throws

* IBM-MQ:ACK
* IBM-MQ:CONNECTIVITY
* IBM-MQ:CONSUMING
* IBM-MQ:DESTINATION_NOT_FOUND
* IBM-MQ:ILLEGAL_BODY
* IBM-MQ:PUBLISHING
* IBM-MQ:RETRY_EXHAUSTED
* IBM-MQ:SECURITY
* IBM-MQ:TIMEOUT


[[ack]]
=== Ack

`<ibm-mq:ack>`


Allows the user to perform an ACK when the AckMode#MANUAL mode is elected while consuming the Message. As per JMS Spec, performing an ACK over a single Message automatically works as an ACK for all the Messages produced in the same JmsSession.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Ack Id a| String |  The AckId of the Message to ACK. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
|===

==== Throws

* IBM-MQ:ACK


[[recoverSession]]
=== Recover Session

`<ibm-mq:recover-session>`


Allows a user to perform a session recover when the AckMode#MANUAL mode is elected while consuming the Message. As per JMS Spec, performing a session recover automatically redelivers all the consumed messages that had not being acknowledged before this recover.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Ack Id a| String |  The AckId of the Message Session to recover. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
|===



==== Throws

* IBM-MQ:SESSION_RECOVER


== Sources

[[listener]]
=== On New Message

`<ibm-mq:listener>`


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination a| String |  The name of the Destination from where the Message should be consumed. |  | x
| Consumer Type a| One of:

* <<topic-consumer>>
* queue-consumer |  The Type of the Consumer that should be used for the provided destination. |  |
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL
** DUPS_OK |  The Session ACK mode to use when consuming a message. |  |
| Selector a| String |  JMS selector to use for filtering incoming messages. |  |
| Number Of Consumers a| Number |  The number of concurrent consumers to use to receive JMS Messages. |  `4` |
| Inactivity Timeout Minutes a| Number a| Inactivity timeout in minutes. If no message is received within this period, the listener triggers a reconnection.

NOTE: Configure the inactivity timeout based on the expected message frequency. Set the value higher than the maximum expected interval between messages to avoid unnecessary listener reconnections. Avoid very low timeout values. For example, if the listener receives at least one message every 5 hours, configure the inactivity timeout to approximately 6 hours.
|  `0` |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Transactional Action a| Enumeration, one of:

** ALWAYS_BEGIN
** NONE |  The type of beginning action that sources can take regarding transactions. |  `NONE` |
| Transaction Type a| Enumeration, one of:

** LOCAL
** XA |  The type of transaction to create. Availability depends on the runtime version. |  `LOCAL` |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in a cluster. |  `true` |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Content Type a| String |  Sets the content type of the received message. If the message already has a content type, it is overridden. |  |
| Encoding a| String |  Sets the encoding of the received message. If the message already has one, it is overridden. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
| Ignore JMS replyTo header | Boolean | True if no automatic response is needed for messages with destination header |  false |
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the message. |  |
| Correlation ID a| String |  The JMSCorrelationID header of the message. |  |
| Send Content Type a| Boolean |  Whether or not to send the body content type as a property. |  `true` |
| Content Type a| String |  The content type of the message's body. |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property. |  `true` |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<MQJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties that should be set to this Message |  |
| JMSX Properties a| <<MQJmsxProperties>> |  The JMSX properties that should be set to this Message. |  |
| Persistent Delivery a| Boolean |  Whether or not the delivery should be done with a persistent configuration. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations, |  |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp. |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to be applied to postpone the Message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations. |  |
| Send Correlation ID a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Options on whether to include an outbound correlation ID or not. |  |
| Request Reply Pattern a| Enumeration, one of:

** CORRELATION_ID
** MESSAGE_ID
** NONE | Indicates how requests and reply messages are correlated, which ensures that the incoming message is the proper reply to the outgoing message.

* The `CORRELATION_ID` pattern value is used with the *Publish Consume* operation. After the operation publishes a request message to the destination queue, it expects a message with the same correlation ID as the request message. It then consumes that correlated response message.

* The `MESSAGE_ID` pattern value is used with the *Publish Consume* operation. After the operation publishes a request message to the destination queue, it expects a message with a correlation ID of the same value as the message ID of the request message. It then consumes that correlated response message. | CORRELATION_ID |
|===

==== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<IBM MQ Attributes>>
|===

=== For Configurations

* <<config>>



== Types
[[Tls]]
=== TLS

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of CipherSuites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the trust store which resolves relative to the current classpath and file system, if possible. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations are performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the key store which resolves relative to the current classpath and file system, if possible. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |`true` |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance can be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[IBM-MQ-Attributes]]
=== IBM MQ Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Properties a| <<JMS Message Properties,JMS Message Properties>> |  |  |
| Headers a| Any |  |  | x
| Ack Id a| String |  |  |
|===

[[JMS-Message-Properties]]
=== JMS Message Properties

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| All a| Any |  |  | x
| User Properties a| Any |  |  | x
| Jms Properties a| Any |  |  | x
| Jmsx Properties a| <<JMSX Properties,JMSX Properties>> |  |  |
|===

[[jmsx-properties]]
=== JMSX Properties

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Jmsx User ID a| String |  |  |
| Jmsx App ID a| String |  |  |
| Jmsx Delivery Count a| Number |  |  |
| Jmsx Group ID a| String |  |  |
| Jmsx Group Seq a| Number |  |  |
| Jmsx Producer TXID a| String |  |  |
| Jmsx Consumer TXID a| String |  |  |
| Jmsx Rcv Timestamp a| Number |  |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. | `SHA-256`  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is going to be stored. |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
|===

[[MQJmsDestination]]
=== MQ JMS Destination

Representation of a destination that contains its identifier name and the kind of destination.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Destination a| String | The name that identifies the destination where a message should be sent. |  | x
| Destination Type a| Enumeration, one of:

** QUEUE
** TOPIC | The type of this destination. | QUEUE |
|===

[[MQJmsxProperties]]
=== MQ JMSX Properties

IBM MQ implementation of the JMSX properties.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Jmsx User ID a| String |  |  |
| Jmsx App ID a| String |  |  |
| Jmsx Delivery Count a| Number |  |  |
| Jmsx Group ID a| String |  |  |
| Jmsx Group Seq a| Number |  |  |
| Jmsx Producer TXID a| String |  |  |
| Jmsx Consumer TXID a| String |  |  |
| Jmsx Rcv Timestamp a| Number |  |  |
|===

[[ErrorMapping]]
=== Error Mapping

Maps an error thrown by this component to a custom error type.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  The error type to map from. |  |
| Target a| String |  The custom error type to map to. |  | x
|===

[[topic-consumer]]
=== Topic Consumer

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Durable a| Boolean |  | `false` |
| Shared a| Boolean |  | `false` |
| No Local a| Boolean |  | `false` |
| Subscription Name a| String |  |  |
|===

[[binding]]
=== Binding

Connection mode in which the IBM MQ client automatically connects to the IBM MQ server running on the same system.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Queue Manager a| String | The queue manager name. |  |
|===

[[client]]
=== Client

Connection mode in which the IBM MQ JMS client connects to the queue manager over TCP/IP. You can use this connection mode to connect to brokers on the same machine or on remote machines.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the IBM MQ Broker is. |  | x
| Port a| Number | Queue Manager listener port. | `1414` |
| Queue Manager a| String | The queue manager which is used when selecting a channel definition. |  |
| Channel a| String | Name of the channel to connect to. |  |
| Connection Name List a| String | Hosts to which the client attempts to reconnect to after its connection is broken. The connection name list is a comma-separated list of host and IP port pairs. |  |
| Client Reconnect Options a| Enumeration, one of:

** RECONNECT
** RECONNECT_Q_MGR
** AS_DEF
** DISABLED | Controls the reconnection behavior for the IBM MQ client. `RECONNECT` allows reconnection to any queue manager in the cluster, which is required for IBM MQ Uniform Cluster automatic application balancing. `RECONNECT_Q_MGR` restricts reconnection to the same queue manager. Applies when a Connection Name List or CCDT is configured. | `RECONNECT` |
| Client Reconnect Timeout a| Number | The maximum time in seconds that the client spends attempting to reconnect. Applies when Connection Name List is configured with multiple hosts. | `20` |
|===

[[default-caching]]
=== Default Caching

Caching strategy that reuses the logic of the default JMS caching strategy.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Session Cache Size a| Number | Size of the session cache. |  |
| Cache Producers a| Boolean | Indicates whether or not to cache the producer. | `true` |
| Cache Consumers a| Boolean | Indicates whether or not to cache the consumer. | `true` |
|===

== See Also

https://help.salesforce.com[Salesforce Help]
